fix grid spacing

--- a/sites/all/themes/earth/sass/pages.scss
+++ b/sites/all/themes/earth/sass/pages.scss
@@ -164,8 +164,8 @@ body {
 #content {
 
   .views-row, .flexslider {
-    padding-top: 0.6em;
-    padding-bottom: 0.6em;
+    padding-top: 0.9em;
+    padding-bottom: 0.9em;
   }
 
   .views-field {
